src/test/ui/dst/dst-bad-assign-2.stderr
error[E0277]: the size for values of type `dyn ToBar` cannot be known at compilation time
  --> $DIR/dst-bad-assign-2.rs:35:5
   |
LL |     f5.ptr = *z;
   |     ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `dyn ToBar`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: the left-hand-side of an assignment must have a statically known size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
